--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,3 +1,3 @@
-<header class="squeeze12 centerx p1">
-  <p class="fs3" style="font-family: krona;">BEVAE</p>
+<header class="[ centerx squeeze12 ] [ p1 ]">
+  <a class="fs2" href="/" style="font-family: krona; color: black;">BEVAE</a>
 </header>
