--- a/src/assets/scss/composition/_grid.scss
+++ b/src/assets/scss/composition/_grid.scss
@@ -1,3 +1,4 @@
+.grid0,
 .grid1,
 .grid2,
 .grid3,
@@ -14,6 +15,7 @@
 }
 
 
+.grid0  { grid-template-columns: repeat(auto-fit, minmax(var(--space0 ), 1fr)); }
 .grid1  { grid-template-columns: repeat(auto-fit, minmax(var(--space1 ), 1fr)); }
 .grid2  { grid-template-columns: repeat(auto-fit, minmax(var(--space2 ), 1fr)); }
 .grid3  { grid-template-columns: repeat(auto-fit, minmax(var(--space3 ), 1fr)); }
