--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ description }}">
-  <link rel="icon" type="image/x-icon" href="/assets/img/favicon.svg">
+  <link rel="preload" href="/assets/fonts/kronaone.woff" as="font" type="font/woff">
   <link rel="stylesheet" href="/assets/style.css">
   <title>{{ title }}</title>
   {% block head %}{% endblock %}
