Move build folder to dist + add SDT page

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ description }}">
   <link rel="preload" href="/assets/fonts/kronaone.woff" as="font" type="font/woff">
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/assets/styles.css">
   <title>{{ title }}</title>
   {% block head %}{% endblock %}
 </head>
