--- a/src/_includes/partials/post.html
+++ b/src/_includes/partials/post.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 {% block body %}
+{% include 'partials/header.html' %}
 <main class="[ centerx squeeze12 ] [ p0 ]">
-  <article class="flow1">
+  <article class="flow3/2">
+    <div>
+      <h1>{{ title }}</h1>
+      {% if subtitle %}<p class="fs2">{{ subtitle }}</p>{% endif %}
+    </div>
     {{ content | safe }}
   </article>
 </main>
