Continue lifestyle change article

--- a/src/_includes/partials/post.html
+++ b/src/_includes/partials/post.html
@@ -2,7 +2,7 @@
 {% block body %}
 {% include 'partials/header.html' %}
 <main class="[ centerx squeeze12 ] [ p0 ]">
-  <article class="flow3/2">
+  <article class=" [ post ] [ flow3/2 ]">
     <div>
       <h1>{{ title }}</h1>
       {% if subtitle %}<p class="fs2">{{ subtitle }}</p>{% endif %}
