--- a/src/assets/scss/block/_posts.scss
+++ b/src/assets/scss/block/_posts.scss
@@ -1,5 +1,12 @@
 .post {
-  ul > * + * {
-    margin-block-start: 0.67em;
+  ul {
+    list-style: inside disc;
+    & > * + * {
+      margin-block-start: 0.67em;
+    }
+  }
+
+  li {
+    padding-inline-start: var(--space-1);
   }
 }
