--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -2,7 +2,8 @@
   <a class="[ logo ] [ fs2 ]" href="/{{ locale }}/">BEVAE</a>
   <nav>
     {% for language in site.languages %}
-    {% if loop.first %}<ul style="list-style: none;">{% endif %}
+    {% if loop.first %}<ul>{% endif %}
+
       {% set translationUrl = "/" + language.code + "/" %}
       {% set activeClass = "is-active" if language.code == locale else "" %}
 
