--- a/src/assets/scss/block/_nav.scss
+++ b/src/assets/scss/block/_nav.scss
@@ -1,6 +1,7 @@
 .logo {
-  font-family: krona;
   color: #ff3300;
+  font-family: krona;
   font-style: italic;
+  font-weight: var(--weight400);
   &:hover { text-decoration: none; }
 }
