--- a/src/assets/scss/block/_forms.scss
+++ b/src/assets/scss/block/_forms.scss
@@ -22,12 +22,16 @@ form {
   input[type="radio"] {
     accent-color: #ff3300;
   }
-  button[type="submit"] {
+  input[type="submit"] {
     background: #ff3300;
     color: white;
+    padding: var(--space-2) var(--space2);
+    border: none;
+    border-radius: var(--radius-1);
+    font-size: var(--step1);
+    font-weight: var(--weight700);
     &:hover {
       background: black;
     }
-    border-radius: var(--radius-1);
   }
 }
