--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,4 +1,4 @@
-<header class="[ cluster g-2 jfybetween itemscenter squeeze12 centerx ] [ px0 pt1 pb3 ]">
+<header class="[ nav-header ] [ cluster g-2 jfybetween itemscenter ]">
   <a class="[ logo ] [ fs2 ]" href="/{{ locale }}/">BEVAE</a>
   <nav>
     {% for language in site.languages %}
@@ -10,7 +10,11 @@
       {% for entry in collections.all %}
       {% if entry.data.translationKey == translationKey and entry.data.locale == language.code and entry.data.locale != locale %}
       {% set translationUrl = entry.url %}
-      <li class="fs-1"><a class="{{ activeClass }}" href="{{ translationUrl }}">{{ language.message }}</a></li>
+      <li class="fs-1">
+        <a class="[ {{ activeClass }} ] [ icon cluster g-3 ]" href="{{ translationUrl }}">{{ language.message }}
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M11.25 4.5l7.5 7.5-7.5 7.5m-6-15l7.5 7.5-7.5 7.5" /></svg>
+        </a>
+      </li>
       {% endif %}
       {% endfor %}
 
