--- a/src/assets/scss/global/_root.scss
+++ b/src/assets/scss/global/_root.scss
@@ -1,12 +1,12 @@
 :root {
 
   /* Color palette */
-  --primary50:  hsl();
+  --primary50:  hsl(12, 50%, 96%);
   --primary100: hsl();
   --primary200: hsl();
   --primary300: hsl();
   --primary400: hsl();
-  --primary500: hsl();
+  --primary500: hsl(12, 100%, 50%);
   --primary600: hsl();
   --primary700: hsl();
   --primary800: hsl();
