--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -140,8 +140,9 @@
  *   - Solve more than one contextual problem
  * 
  */
+ 
 
-
+@use 'block/cards';
 @use 'block/forms';
 @use 'block/nav';
 @use 'block/posts';
