--- a/src/assets/scss/utility/_alignment.scss
+++ b/src/assets/scss/utility/_alignment.scss
@@ -30,6 +30,6 @@
 /* Text align */
 .textcenter { text-align: center;  }
 .textend    { text-align: end;     }
-.textstart  { text-aling: start;   }
+.textstart  { text-align: start;   }
 .textjfy    { text-align: justify; }
 
