--- a/src/assets/scss/block/_nav.scss
+++ b/src/assets/scss/block/_nav.scss
@@ -1,7 +1,13 @@
 .logo {
-  color: #ff3300;
+  color: var(--primary500);
   font-family: krona;
   font-style: italic;
   font-weight: var(--weight400);
   &:hover { text-decoration: none; }
+}
+
+.nav-header {
+  width: 100%;
+  padding: var(--space0) var(--space1) var(--space-3);
+  background: var(--primary50);
 }
