Update body background to primary50

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -9,7 +9,7 @@
   <title>{{ title }}</title>
   {% block head %}{% endblock %}
 </head>
-<body class="stack g4 itemscenter">
+<body class="stack itemscenter">
   {% block body %}{% endblock %}
 </body>
 </html>
