--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block body %}
 {% include 'partials/header.html' %}
-<main class="[ squeeze11 ] [ px0 pb4 ]">
-  <article class=" [ post ] [ flow3/2 ]">
+<main>
+  <article class=" [ post ] [ squeeze11 centerx flow3/2 ]">
     <div>
       <h1>{{ title | capitalize }}</h1>
       {% if subtitle %}<p class="fs2">{{ subtitle | capitalize }}</p>{% endif %}
@@ -10,4 +10,9 @@
     {{ content | safe }}
   </article>
 </main>
+
+
+<script>
+  // Renders the top progress bar
+</script>
 {% endblock %}
