--- a/src/assets/scss/global/_elements.scss
+++ b/src/assets/scss/global/_elements.scss
@@ -1,9 +1,16 @@
 body {
+  background-color: var(--primary50);
   font-family: var(--sans);
   font-size: var(--step0);
   font-weight: var(--weight400);
   letter-spacing: +.03ch;
   line-height: var(--linebody);
+}
+
+main {
+  width: 100vw;
+  background-color: white;
+  padding: var(--space4) var(--space0);
 }
 
 ::selection {
