--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -11,8 +11,29 @@
   </article>
 </main>
 
-
+<!-- Render and update the progress bar -->
 <script>
-  // Renders the top progress bar
+  'use strict';
+
+  // Create the progress bar
+  const body = document.querySelector('body');
+  const progressBar = document.createElement('div');
+  progressBar.style.cssText = 'display: block; content: ""; border-top: var(--border1) solid var(--primary300); position: fixed; top: 0; left: 0; width: 0vw; border-radius: 0 var(--radius-2) var(--radius-2) 0;';
+  body.append(progressBar);
+
+  // Update the width accordingly
+  const headerHeight = document.querySelector('header').scrollHeight;
+  const windowHeight = window.innerHeight;
+  const postHeight = body.scrollHeight - headerHeight - windowHeight;
+  window.addEventListener('scroll', () => {
+    let currentScroll = window.scrollY;
+    console.log(currentScroll - headerHeight);
+    if (currentScroll - headerHeight >= 0) {
+      progressBar.style.width = `${(currentScroll - headerHeight) / postHeight * 100}vw`;
+    }
+    else {
+      progressBar.style.width = '0vw';
+    }
+  });
 </script>
 {% endblock %}
