--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,2 +1,7 @@
-<footer>
+<footer class="[ cluster jfybetween itemscenter ] [ px1 py0 fs-1 ]">
+  <p>This website doesn't use cookies nor collect personally identifiable data. Reach me at <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
+  <a class="[ top-button ] [ cluster g-3 itemscenter ] [ px0 py-2 bd-1 bd-p500 ]" href="#">
+    <p>Go to top</p>
+    <svg class="icon1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+  </a>
 </footer>
