--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,22 +1,34 @@
-<footer class="[ cluster g2 jfybetween itemscenter ] [ p1 fs-1 ]">
-  {% if locale == 'en' %}
+<footer class="[ cluster gx5 gy2 jfybetween itemscenter ] [ p1 fs-1 ]">
   <div class="flow1">
-    <p>This website doesn't use cookies nor collect personally identifiable data.</p>
+    {% if locale == 'en' %}
+    <p>This website doesn't use cookies nor collect personal data.</p>
     <p>Want to get in touch? Reach me at <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
-  </div>
-  <a class="[ top-button ] [ cluster g-3 itemscenter ]" href="#">
-    <p>Go to top</p>
-    <svg class="icon1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-  </a>
-  {% endif %}
-  {% if locale == 'es' %}
-  <div class="flow1">
-    <p>Este sitio web no utiliza cookies ni recoge datos personalmente identificables.</p>
+    {% else %}
+    <p>Este sitio web no usa cookies ni recoge datos personales.</p>
     <p>¿Quieres ponerte en contacto? Escríbeme en <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
+    {% endif %}
   </div>
-  <a class="[ top-button ] [ cluster g-3 itemscenter ]" href="#">
-    <p>Al tope</p>
-    <svg class="icon1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-  </a>
-  {% endif %}
+  <div class="cluster g1">
+
+    {% for language in site.languages %}
+    {% if loop.first %}<ul>{% endif %}
+
+      {% set translationUrl = "/" + language.code + "/" %}
+      {% set activeClass = "is-active" if language.code == locale else "" %}
+
+      {% for entry in collections.all %}
+      {% if entry.data.translationKey == translationKey and entry.data.locale == language.code and entry.data.locale != locale %}
+      {% set translationUrl = entry.url %}
+      <li>
+        <a class="[ button {{ activeClass }} ] [ cluster g-3 jfycenter itemscenter ] [ fw700 ]" href="{{ translationUrl }}">
+          <svg class="icon1" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.75" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418" /></svg>
+          <p>{{ language.message }}</p>
+        </a>
+      </li>
+      {% endif %}
+      {% endfor %}
+
+    {% if loop.last %}</ul>{% endif %}
+    {% endfor %}
+  </div>
 </footer>
