Add danish folder, add netlify 404 redirect

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -11,7 +11,7 @@
   <div class="cluster g1">
 
     {% for language in site.languages %}
-    {% if loop.first %}<ul>{% endif %}
+    {% if loop.first %}<ul class="flow2">{% endif %}
 
       {% set translationUrl = "/" + language.code + "/" %}
       {% set activeClass = "is-active" if language.code == locale else "" %}
