Add Fathom analytics, tweak button animation

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -7,7 +7,12 @@
   <link rel="preload" href="/assets/fonts/kronaone.woff" as="font" type="font/woff">
   <link rel="stylesheet" href="/assets/styles.css">
   <title>{{ title }}</title>
+
   {% block head %}{% endblock %}
+
+
+  <!-- Fathom analytics -->
+  <script src="https://cdn.usefathom.com/script.js" data-site="JHRSRSLR" defer></script>
 </head>
 <body class="stack">
   {% block body %}{% endblock %}
