--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -19,7 +19,7 @@
   // Create the progress bar
   const body = document.querySelector('body');
   const progressBar = document.createElement('div');
-  progressBar.style.cssText = 'display: block; content: ""; border-top: var(--border1) solid var(--primary300); position: fixed; top: 0; left: 0; width: 0vw; border-radius: 0 var(--radius-2) var(--radius-2) 0;';
+  progressBar.style.cssText = 'display: block; content: ""; border-top: var(--border1) solid var(--primary300); position: fixed; top: 0; left: 0; width: 0vw;';
   body.append(progressBar);
 
   // Update the width accordingly
