--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="flow1">
     {% if locale == 'en' %}
     <p>This website doesn't use cookies nor collect personal data.</p>
-    <p>Want to get in touch? Reach me at <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
+    <p>Wanna get in touch? Email me at <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
     {% else %}
     <p>Este sitio web no usa cookies ni recoge datos personales.</p>
     <p>¿Quieres ponerte en contacto? Escríbeme en <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
