Remove analytics from local site

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="[ cluster gx5 gy2 jfybetween itemscenter ] [ p1 fs-1 ]">
   <div class="flow1">
     {% if locale == 'en' %}
-    <p>I use a cookie-free, GDPR-compliant analytics service called Fathom to collect <em>non-personally identifiable</em> statistics. <a href="https://videos.usefathom.com/how-fathom-works.mp4">Watch a short video</a> to learn more about it.</p>
+    <p>I use a cookie-free, GDPR-compliant analytics service called Fathom to collect <em>non-personally identifiable</em> statistics. You can <a href="https://videos.usefathom.com/how-fathom-works.mp4">watch a short video</a> to learn more or <a href="https://app.usefathom.com/share/jhrsrslr/bevae">see the data yourself.</a></p>
     <p>Wanna get in touch? Email me at <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
     {% else %}
-    <p>Uso un servicio de análisis llamado Fathom para recopilar estadísticas <em>no identificables personalmente.</em> Fathom no utiliza cookies y cumple con el RGPD (GDPR). <a href="https://videos.usefathom.com/how-fathom-works.mp4">Ve un breve vídeo</a> en inglés para obtener más información.</p>
+    <p>Uso un servicio de analítica de datos llamado Fathom para recopilar estadísticas <em>no identificables personalmente.</em> Fathom no utiliza cookies y cumple con el RGPD (GDPR). Puedes <a href="https://videos.usefathom.com/how-fathom-works.mp4">ver un breve vídeo</a> en inglés para obtener más información o <a href="https://app.usefathom.com/share/jhrsrslr/bevae">ver los datos por ti mismo.</a></p>
     <p>¿Quieres ponerte en contacto? Escríbeme en <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
     {% endif %}
   </div>
