--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -19,7 +19,7 @@
   // Create the progress bar
   const body = document.querySelector('body');
   const progressBar = document.createElement('div');
-  progressBar.style.cssText = 'display: block; content: ""; border-top: var(--border1) solid var(--primary300); position: fixed; top: 0; left: 0; width: 0vw;';
+  progressBar.style.cssText = 'display: block; content: ""; border-top: var(--border1) solid var(--primary300); position: fixed; top: 0; left: 0; width: 0vw; border-radius: 0 var(--radius-2) var(--radius-2) 0;';
   body.append(progressBar);
 
   // Update the width accordingly
@@ -29,7 +29,7 @@
   window.addEventListener('scroll', () => {
     console.log(window.scrollY - headerHeight);
     if (window.scrollY - headerHeight >= 0) {
-      progressBar.style.width = `${(window.scrollY - headerHeight) / postHeight * 100}vw`;
+      progressBar.style.width = `calc(${(window.scrollY - headerHeight) / postHeight * 100}vw + (var(--radius-2) / 2))`;
     } else {
       progressBar.style.width = '0vw';
     }
