--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="{{ description }}">
+  <meta name="description" content="{{ description | capitalize }}">
   <link rel="preload" href="/assets/fonts/kronaone.woff" as="font" type="font/woff">
   <link rel="stylesheet" href="/assets/styles.css">
   <title>{{ title }}</title>
