Update footer cookie policy desc

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="[ cluster gx5 gy2 jfybetween itemscenter ] [ p1 fs-1 ]">
   <div class="flow1">
     {% if locale == 'en' %}
-    <p>I use a cookie-free, GDPR-compliant web analytics service to collect <em>non-personally identifiable</em> statistics. <a href="https://videos.usefathom.com/how-fathom-works.mp4">Watch a short video</a> to learn more.</a></p>
+    <p>I use a cookie-free web analytics service to collect <em>non-personally identifiable</em> statistics. <a href="https://videos.usefathom.com/how-fathom-works.mp4">Watch a short video</a> to learn more.</a></p>
     <p>Wanna get in touch? Email me at <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
     {% else %}
-    <p>Recopilo estadísticas <em>no identificables personalmente</em> mediante un servicio de analítica web que no usa cookies y que cumple con el RGPD. <a href="https://videos.usefathom.com/how-fathom-works.mp4">Ver un breve vídeo</a> en inglés para obtener más información.</p>
+    <p>Recopilo estadísticas <em>no identificables personalmente</em> mediante un servicio de analítica web que no usa cookies. <a href="https://videos.usefathom.com/how-fathom-works.mp4">Ver un breve vídeo</a> en inglés para obtener más información.</p>
     <p>¿Quieres ponerte en contacto? Escríbeme en <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
     {% endif %}
   </div>
