Change body font and color, move disclaimer to footer

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -6,7 +6,7 @@
   <meta name="description" content="{{ description | capitalize }}">
   <link rel="preload" href="/assets/fonts/kronaone.woff" as="font" type="font/woff">
   <link rel="stylesheet" href="/assets/styles.css">
-  <title>{{ title }}</title>
+  <title>BEVAE | {{ title }}</title>
 
   {% block head %}{% endblock %}
 </head>
