--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,11 +1,13 @@
-<footer class="[ cluster gx5 gy2 jfybetween itemscenter ] [ p1 fs-1 ]">
+<footer class="[ cluster gx5 gy2 jfybetween ] [ p1 fs-1 ]">
   <div class="flow1">
     {% if locale == 'en' %}
     <p>I use a cookie-free web analytics service to collect <em>non-personally identifiable</em> statistics. <a href="https://videos.usefathom.com/how-fathom-works.mp4">Watch a short video</a> to learn more.</a></p>
     <p>Wanna get in touch? Email me at <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
+    <p><strong>This website is for educational purposes only. I am not providing personalized medical advice and I take no responsibility for what you do with the information presented.</strong></p>
     {% else %}
     <p>Recopilo estadísticas <em>no identificables personalmente</em> mediante un servicio de analítica web que no usa cookies. <a href="https://videos.usefathom.com/how-fathom-works.mp4">Ver un breve vídeo</a> en inglés para obtener más información.</p>
     <p>¿Quieres ponerte en contacto? Escríbeme en <a href="mailto:frederik@bevae.com">frederik@bevae.com</a></p>
+    <p><strong>Este sitio web tiene sólo fines educativos. No estoy proporcionando aconsejo médico personalizado ni asumo ninguna responsabilidad por lo que hagas con la información presentada.</strong></p>
     {% endif %}
   </div>
   <div class="cluster g1">
