--- a/src/assets/scss/block/_buttons.scss
+++ b/src/assets/scss/block/_buttons.scss
@@ -8,6 +8,8 @@
   font-weight: var(--weight700);
   transition: transform .1s;
 
+  border: none;
+
 
   &:hover {
     background: var(--primary500);
