--- a/src/assets/scss/global/_fonts.scss
+++ b/src/assets/scss/global/_fonts.scss
@@ -5,3 +5,35 @@
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'opensans';
+    src: url('./fonts/opensans-400.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'opensans';
+    src: url('./fonts/opensans-400i.woff') format('woff');
+    font-weight: 400;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'opensans';
+    src: url('./fonts/opensans-700.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'opensans';
+    src: url('./fonts/opensans-700i.woff') format('woff');
+    font-weight: 700;
+    font-style: italic;
+    font-display: swap;
+}
