--- a/src/assets/scss/block/_text.scss
+++ b/src/assets/scss/block/_text.scss
@@ -1,5 +1,6 @@
 .h-fancy {
   color: black;
   background: var(--primary50);
-  padding: var(--space-1) var(--space-1) var(--space-3);
+  padding: var(--space0) var(--space-2) var(--space-3);
+  margin-inline-start: calc(var(--space-2) * -1);
 }
