Adjust homepage spacing

--- a/src/assets/scss/block/_text.scss
+++ b/src/assets/scss/block/_text.scss
@@ -1,4 +1,5 @@
 .h-fancy {
+  max-inline-size: none;
   color: black;
   background: var(--primary50);
   padding: var(--space0) var(--space-2) var(--space-3);
